[gd_scene load_steps=5 format=3 uid="uid://dnbd1ds28c1bg"]

[ext_resource type="Script" uid="uid://3xq5wuu1cbp2" path="res://main.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://yc810m0t01te" path="res://icon.svg" id="1_ul4es"]
[ext_resource type="Script" uid="uid://dpgvgbwh5cac2" path="res://Scripts/button1.gd" id="2_lquwl"]

[sub_resource type="GDScript" id="GDScript_0xm2m"]
script/source = "extends MenuButton


func _ready():
	self.pressed.connect(_on_button2_pressed)


# 当按钮被按下时调用
func _on_button2_pressed():
	get_tree().change_scene_to_file(\"res://noreward.tscn\")
"

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="MenuButton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 205.0
offset_top = 64.0
offset_right = 543.0
offset_bottom = 369.0
script = ExtResource("2_lquwl")

[node name="Text" type="Button" parent="MenuButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = 12.0
offset_right = 75.0
offset_bottom = 70.0
grow_horizontal = 2
text = "￥2"

[node name="HoldButton" type="Button" parent="MenuButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -216.0
offset_right = 120.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 0
icon = ExtResource("1_ul4es")
icon_alignment = 1
expand_icon = true

[node name="MenuButton2" type="MenuButton" parent="."]
offset_left = 622.0
offset_top = 69.0
offset_right = 960.0
offset_bottom = 360.0
script = SubResource("GDScript_0xm2m")

[node name="button1" type="Button" parent="MenuButton2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = 12.0
offset_right = 75.0
offset_bottom = 70.0
grow_horizontal = 2
text = "￥0"

[node name="TextureRect" type="TextureRect" parent="MenuButton2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -133.0
offset_right = 66.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_ul4es")

[node name="Label" type="Label" parent="."]
offset_left = 324.0
offset_top = 402.0
offset_right = 780.0
offset_bottom = 472.0

[node name="Label2" type="Label" parent="."]
offset_left = 335.0
offset_top = 455.0
offset_right = 791.0
offset_bottom = 525.0
